--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Anonymous chat</title>
         <style>
             body {
                 margin: 0;
-                padding-bottom: 70px;
+                padding-bottom: 50px;
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
                     Roboto, Helvetica, Arial, sans-serif;
                 background: #c8b8f2d3;
@@ -23,14 +26,15 @@
                 left: 0;
                 right: 0;
                 display: flex;
-                height: 70px;
+                height: 50px;
                 box-sizing: border-box;
                 backdrop-filter: blur(10px);
             }
             #input {
                 border: none;
                 padding: 0 1rem;
-                flex-grow: 1;
+                flex-grow: 0;
+                width: 100%;
                 border-radius: 3px;
                 margin: 0.25rem;
             }
@@ -57,11 +61,6 @@
             }
             #messages > li:nth-child(odd) {
                 background: #9e85dc;
-            }
-
-            .container {
-                width: 80% !important;
-                position: relative;
             }
         </style>
     </head>
